--- a/ControllerOverlay.css
+++ b/ControllerOverlay.css
@@ -4,7 +4,7 @@
 }
 
 .ds4.white.disconnected {
-    background: url(ps4-assets/disconnected.svgz);
+    background: url(Base Final.png);
 }
 
 .ds4.white .trigger {
